Picture-in-Picture: check if we have a layer when hiding the interstitial.

When the player is destroyed, it notifies the element which then hides
the interstitial. In a regular scenario, when the interstitial is hidden,
the layer on the page should be visible again. However, when the player
is destroyed, there is no more layer.

Bug: 838147
Change-Id: I1d3a8970246d8f867fecd7ed7a5a1d9f371f7e5c
Reviewed-on: https://chromium-review.googlesource.com/1035262
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554798}
Former-commit-id: 9111d612894b17c907f4328121ff2bec9c776b73